--- a/index.html
+++ b/index.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="HTML CSS SASS SCSS META PAGINA DE MUDANZAS Y TRANSPORTE EN GENERAL width=device-width, initial-scale=1.0">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Luvakena</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg--body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./pages/contactanoss.html">Contactanos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/seguros.html">Seguros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/donde-nos-encontramos.html">Ubicacion</a>
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="./pages/contactanoss.html">Contratar</a>
+                    <a class="nav-link" href="./pages/servicios.html">Bodegas</a>
+                    <a class="nav-link" href="./pages/seguros.html">Seguros</a>
+                    <a class="nav-link" href="./pages/donde-nos-encontramos.html">Donde nos encontramos</a>
+                    <a class="nav-link disabled" aria-disabled="true">Luvakena</a>
+                </div>
             </div>
         </div>
     </nav>
 
-    </div>
-    <header class="content header">
+    <header class="header1">
         <h1 class="title1">Luvakena</h1>
         <div class="btn-home">
             <a href="./pages/contactanoss.html" class="btn">Contratanos</a>
-        </div>
-
     </header>
+
     <section class="content sau">
-        <h2 class="title">Productos</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem quo impedit iusto? Mollitia a inventore
-            quis in dignissimos molestiae, hic expedita similique architecto veritatis debitis ut corrupti, quam
-            obcaecati animi!</p>
+        <h2 class="title">Quienes somos</h2>
+        <p>¡Hola! Como empresa familiar de mudanzas y transporte, seguramente brindan servicios de mudanzas locales y a
+            larga distancia, almacenamiento seguro de pertenencias, embalaje y desembalaje, entre otros servicios
+            relacionados con el transporte de bienes.
+        </p>
 
         <div class="box-container">
 
@@ -58,7 +51,7 @@
             </div>
             <div class="box">
                 <p>Whatsapp</p>
-                <a href="https://facebook.com">Enviar mensaje</a>
+                <a href="https://www.whatsapp.com/?lang=es_LA">Enviar mensaje</a>
             </div>
             <div class="box">
                 <p>X (mas conocido como twitter)</p>
@@ -70,8 +63,7 @@
             <h2 class="title">Nosotros</h2>
             <p>
                 Somos una empresa de mudanzas con un servicio especializado profesional, responsable y velando siempre
-                por
-                la
+                por la
                 solución óptima,
                 una buena atención y disposición con nuestros clientes.
                 Al cotizar con nosotros podrá comprobar todos nuestros servicios: mudanzas de casas,
@@ -82,26 +74,35 @@
             <a href="#" class="btn">Saber mas</a>
 
         </section>
-        <section class="content price">
-            <article class="contain">
-                <h2 class="title">precio</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae debitis repellendus vero esse
-                    sint aperiam ratione, reiciendis labore! Dolore architecto quos nisi optio similique esse illo
-                    reprehenderit aperiam hic.</p>
-                <a href="#" class="btn">Saber precio</a>
+        <section class="price">
+            <article class="content">
+                <h2 class="title">Mision</h2>
+                <p class="text122">Nuestra misión es brindar a nuestros clientes un servicio de mudanzas seguro, confiable y libre de
+                    estrés, que supere sus expectativas y les permita disfrutar de una experiencia de cambio de hogar
+                    positiva. Nos comprometemos a ser un socio de confianza en cada paso del proceso de mudanza,
+                    ofreciendo soluciones personalizadas, atención al detalle y un equipo profesional dedicado a
+                    garantizar la satisfacción y tranquilidad de quienes confían en nosotros. Nuestra meta es hacer que
+                    cada mudanza sea una experiencia sencilla y exitosa para nuestros clientes, proporcionando un
+                    servicio de calidad, eficiente y amigable que marque la diferencia en sus vidas."</p>
+                <a href="#" class="btn">Saber mas</a>
             </article>
         </section>
         <section class="content contact">
-            <h2 class="title">Contacto</h2>
-            <p>3876295922</p>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4307.94794017486!2d-65.40795284638325!3d-24.77702548940054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1713816948662!5m2!1ses-419!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-            <a href="">Ubicacion</a>
+            <h2 class="title">Vision</h2>
+            <p>"Nos visualizamos como líderes en el sector de mudanzas, reconocidos por nuestra excelencia en el
+                servicio al cliente, nuestra integridad y nuestro compromiso con la satisfacción del cliente. Buscamos
+                expandirnos y crecer de manera sostenible, ampliando nuestra presencia en el mercado y fortaleciendo
+                nuestra reputación como la empresa preferida para aquellos que buscan una experiencia de mudanza sin
+                preocupaciones. Nos esforzamos por innovar constantemente en nuestros procesos y servicios, adaptándonos
+                a las necesidades cambiantes de nuestros clientes y destacándonos por nuestra calidad, confiabilidad y
+                profesionalismo en cada mudanza que realizamos. Nuestra visión es seguir siendo el referente en el
+                sector de mudanzas, generando confianza y tranquilidad en cada traslado que llevamos a cabo."</p>
         </section>
+        <footer class="text-center py-3">
+            &copy; 2024 Luvakenaoficial/Blp Todos los derechos reservados.
+        </footer>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 
