--- a/pages/seguros.html
+++ b/pages/seguros.html
@@ -6,46 +6,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luvakena s.a</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-
-
-    <header>
-        <h1>Luvakena</h1>
-    </header>
     <div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg--body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                                href="../pages/contactanoss.html">Contactanos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/seguros.html">Seguros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/donde-nos-encontramos.html">Ubicacion</a>
-                        </li>
-                    </ul>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="./contactanoss.html">Contratar</a>
+                        <a class="nav-link" href="./servicios.html">Bodegas</a>
+                        <a class="nav-link" href="./seguros.html">Seguros</a>
+                        <a class="nav-link" href="./donde-nos-encontramos.html">Donde nos encontramos</a>
+                        <a class="nav-link disabled" aria-disabled="true">Luvakena</a>
+                    </div>
                 </div>
             </div>
+        </nav>>
         </nav>
+
     </div>
+    <h1 class="title2">Elegi el seguro que mas se adapte a tus necesidades</h1>
     <div>
     </div>
 
@@ -53,40 +43,47 @@
 
 
 
+    <section class="container">
+        <div row>
+            <div class="col">
+                <h2 class="title2">Embalaje de enseres menores especiales</h2>
+                <img class="col" src="../assets/img/embalaje.jpeg" alt="embalaje">
+                <article>Se refiere a poner en disposición de cajas, debidamente protegido, todos los enseres menores de
+                    casa,
+                    tales como vajilla, loza, utensilios de cocina, cristalería, adornos, libros, contenido de closet y
+                    otros.
+                    (servicio opcional)</article>
+                <button><a class="btn" href="../pages/contactanoss.html">Contratar</a> </button>
+            </div>
 
-    <div grid3>
-        <div class="grid2">
-            <h2 class="title2">Embalaje de enseres menores especiales</h2>
-            <img class="grid2" src="../assets/img/embalaje.jpeg" alt="embalaje">
-            <article>Se refiere a poner en disposición de cajas, debidamente protegido, todos los enseres menores de
-                casa,
-                tales como vajilla, loza, utensilios de cocina, cristalería, adornos, libros, contenido de closet y
-                otros.
-                (servicio opcional)</article>
-            <button><a class="btn" href="../pages/contactanoss.html">Contratar</a> </button>
-        </div>
+            <div class="col">
+                <h2 class="title2">Desembalaje</h2>
+                <img class="grid2" src="../assets/img/desembalaje.jpeg" alt="desembalaje de mercaderia">
+                <p>Se refiere al embalaje de enseres menores delicados como por ejemplo vajillas, loza en general y
+                    adornos
+                    frágiles. En papel kraft, papel de envolver, plástico de burbuja</p>
+                <button><a class="btn" href="../pages/contactanoss.html">Contratar</a> </button>
+            </div>
 
-        <div>
-            <h2 class="title2">Desembalaje</h2>
-            <img class="grid2" src="../assets/img/desembalaje.jpeg" alt="desembalaje de mercaderia">
-            <p>Se refiere al embalaje de enseres menores delicados como por ejemplo vajillas, loza en general y adornos
-                frágiles. En papel kraft, papel de envolver, plástico de burbuja</p>
-            <button><a class="btn" href="../pages/contactanoss.html">Contratar</a> </button>
+            <div class="col">
+                <h2 class="title2">Ascenso o descenso de mobiliario</h2>
+                <img class="col" src="../assets/img/descensor-autofrenante-ID-S-petzl.jpg"
+                    alt="servicio de aswcenso y descenso de mobiliario">
+                <p>Se refiere a desembalar tanto mobiliario como cajas embaladas antes del traslado y dejarlos
+                    distribuidos
+                    en
+                    su nuevo hogar y traernos todo el material sobrante.</p>
+                <button><a class="btn" href="../pages/contactanoss.html">Contratar</a> </button>
+            </div>
         </div>
+    </section>
 
-        <div class="grid2">
-            <h2 class="title2">Ascenso o descenso de mobiliario</h2>
-            <img class="grid2" src="../assets/img/descensor-autofrenante-ID-S-petzl.jpg"
-                alt="servicio de aswcenso y descenso de mobiliario">
-            <p>Se refiere a desembalar tanto mobiliario como cajas embaladas antes del traslado y dejarlos distribuidos
-                en
-                su nuevo hogar y traernos todo el material sobrante.</p>
-            <button><a class="btn" href="../pages/contactanoss.html">Contratar</a> </button>
-        </div>
-    </div>
-    <footer>
-        <p>@Luvakena S.A 2024</p>
-    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+        <footer class="text-center py-3">
+            &copy; 2024 Luvakenaoficial/Blp Todos los derechos reservados.
+        </footer>
 
 
 
