--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -2,87 +2,77 @@
 <html lang="es">
 
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luvakena s.a</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Luvakena</h1>
-    <div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Inicio</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
-                                href="../pages/contactanoss.html">Contactanos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/seguros.html">Seguros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/donde-nos-encontramos.html">Ubicacion</a>
-                        </li>
-                    </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">Inicio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="./contactanoss.html">Contratar</a>
+                    <a class="nav-link" href="./servicios.html">Bodegas</a>
+                    <a class="nav-link" href="./seguros.html">Seguros</a>
+                    <a class="nav-link" href="./donde-nos-encontramos.html">Donde nos encontramos</a>
+                    <a class="nav-link disabled" aria-disabled="true">Luvakena</a>
                 </div>
-            </div>
-        </nav>
-    </div>
-
-    </section>
-    <section>
-        <div class="caja2">
-            <div class="caja">
-                <h2 class="title4">Arriendo de Bodegas</h2>
-                <p>Nuestras Bodegas , ubicadas a tan solo 10 minutos de Av. Américo Vespucio Norte con la carretera 5
-                    Norte
-                    , y a solo 15 minutos de Las Condes Vitacura y 30 minutos de Lo Barnechea,
-                    comunas que se encuentran conectadas con carreteras de acceso expedito, tales como Norte Sur,
-                    carretera
-                    General San Martín y Autopista Central.</p>
-            </div>
-
-            <div>
-                <div class="caja">
-                    <h2 class="title4">Servicio de bodega 1</h2>
-                    <ul>
-                        <li>Módulos Individuales de 8, 17, 33,50 y 66 mts. cúbicos </li>
-                        <li> Módulos aislados de piso </li>
-                        <li>Módulos no electrificados </li>
-                        <li>Sellos de polvo y humedad </li>
-                        <li>Recinto cerrado con acceso controlado</li>
-                    </ul>
-                    <a class="btn-home" href="../pages/contactanoss.html">Contratar</a>
-                </div>
-
-                <div class="caja">
-                    <ul>
-                        <h2>Servicio de bodega 2</h2>
-                        <li>Acceso a nuestro edificio con clave de acceso</li>
-                        <li>Vigilancia permanente de nuestra instalaciones las 24 horas, los 365 dias del año</li>
-                        <li>Guardia Permanente en el perímetro del recinto</li>
-                        <li>Autoservicio de Bodegas, Usted queda con llaves y puede visitar sus bienes cuando los desee.
-                        </li>
-                    </ul>
-                    <a class="btn-home" href="../pages/contactanoss.html">Contratar</a>
             </div>
         </div>
+    </nav>
 
+    <section class="container my-5">
+        <div class="row">
+            <div class="col-12 mb-4">
+                <h2 class="title4">Arriendo de Bodegas</h2>
+                <p>Nuestras Bodegas, ubicadas a tan solo 10 minutos de Av. Américo Vespucio Norte con la carretera 5
+                    Norte, y a solo 15 minutos de Las Condes Vitacura y 30 minutos de Lo Barnechea,
+                    comunas que se encuentran conectadas con carreteras de acceso expedito, tales como Norte Sur,
+                    carretera General San Martín y Autopista Central.</p>
+            </div>
+
+            <div class="col-md-6 mb-4">
+                <h2 class="title4">Servicio de bodega 1</h2>
+                <ul>
+                    <li>Módulos Individuales de 8, 17, 33, 50 y 66 mts. cúbicos</li>
+                    <li>Módulos aislados de piso</li>
+                    <li>Módulos no electrificados</li>
+                    <li>Sellos de polvo y humedad</li>
+                    <li>Recinto cerrado con acceso controlado</li>
+                </ul>
+                <a class="btn btn-primary" href="../pages/contactanoss.html">Contratar</a>
+            </div>
+
+            <div class="col-md-6 mb-4">
+                <h2 class="title4">Servicio de bodega 2</h2>
+                <ul>
+                    <li>Acceso a nuestro edificio con clave de acceso</li>
+                    <li>Vigilancia permanente de nuestras instalaciones las 24 horas, los 365 días del año</li>
+                    <li>Guardia Permanente en el perímetro del recinto</li>
+                    <li>Autoservicio de Bodegas, Usted queda con llaves y puede visitar sus bienes cuando los desee.</li>
+                </ul>
+                <a class="btn btn-primary" href="../pages/contactanoss.html">Contratar</a>
+            </div>
+        </div>
     </section>
+
+    <footer class="text-center py-3">
+        &copy; 2024 Luvakenaoficial/Blp Todos los derechos reservados.
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
